--- a/src/main/java/TODO
+++ b/src/main/java/TODO
@@ -2,3 +2,4 @@ edycja notatki
 usuwanie notatki
 opis struktury (tekstowy)
 Diagam klas uzypełnić o enitity dwa
+login nie działa przy nie poprawnym loginie
