--- a/src/main/java/TODO
+++ b/src/main/java/TODO
@@ -1,5 +1,5 @@
-edycja notatki
-usuwanie notatki
-opis struktury (tekstowy)
-Diagam klas uzypełnić o enitity dwa
+wszytkie zapytania zmienić na HQL
+usuwanie notatki dodać
 Diagram uzuepłnić o TODO
+
+opis struktury (tekstowy)
